--- a/eqn3.tex
+++ b/eqn3.tex
@@ -1,12 +1,12 @@
 $$
 \begin{align}
- S_T = 2 \times S_{ABC} + S_P \\[1em]
-(a+b) + \frac{(a+b)}{2} = 2 \times \frac{ab}{2} + \frac{c^2}{2} \\
-\frac{(a+b)^2}{2} = ab + \frac{c^2}{2} \\
-2 \times (\frac{(a+b)^2}{2}) = 2 \times (ab + \frac{c^2}{2}) \\
-(a+b)^2 = 2ab + c^2 \\
-a^2 + 2ab + b^2 = 2ab + c^2 \\
--2ab + (a^2 + 2ab + b^2) = -2ab + (2ab + c^2) \\[1em]
+ S_T = 2 \times S_{ABC} + S_P \tag{1} \\[1em]
+(a+b) + \frac{(a+b)}{2} = 2 \times \frac{ab}{2} + \frac{c^2}{2} \tag{2} \\
+\frac{(a+b)^2}{2} = ab + \frac{c^2}{2} \tag{3} \\
+2 \times (\frac{(a+b)^2}{2}) = 2 \times (ab + \frac{c^2}{2}) \tag{4} \\
+(a+b)^2 = 2ab + c^2 \tag{5} \\
+a^2 + 2ab + b^2 = 2ab + c^2 \tag{6} \\
+-2ab + (a^2 + 2ab + b^2) = -2ab + (2ab + c^2) \tag{7} \\[1em]
 \boxed{a^2 + b^2 = c^2}
 \end{align}
 $$
